  module, which means that the foo.{bar,baz} syntactic sugar is only available
  when the Bigarray module is opened; this can break existing programs,
  which should be fixed by opening the Bigarray module.

Compilers:
- PR#6501: harden the native-code generator against certain uses of "%identity"
  (Xavier Leroy, report by Antoine Miné).
- improve type-specialization of unapplied primitives
  (Frédéric Bour, review by Gabriel Scherer)

Runtime system:
- PR#6517: use ISO C99 types {,u}int{32,64}_t in preference to our homegrown
  types {,u}int{32,64}.
  (Xavier Leroy)

Standard library:
* PR#6494: Add equal function in modules
  Bytes, Char, Digest, Int32, Int64, Nativeint, and String
  (Romain Calascibetta)
- PR#6577: improve performance of %L, %l, %n, %S, %C format specifiers
  (Alain Frisch)
- PR#6585: fix memory leak in win32unix/createprocess.c
- PR#6694, PR#6695: deprecate functions using ISO-8859-1 character set
  in Char, Bytes, String and provide alternatives using US-ASCII.
  (Peter Zotov)
- expose Sys.{int_size,max_wosize} for improved js_of_ocaml portability
  (Hugo Heuzard)
* Filename: Optional ?perms argument to open_temp_file
  (Daniel Bünzli, review by Jacques-Pascal Deplaix)

Type system:
* PR#6465: allow incremental weakening of module aliases (Jacques Garrigue).
  This is done by adding equations to submodules when expanding aliases.
  In theory this may be incompatible is some corner cases defining a module
  type through inference, but no breakage known on published code.
- PR#6593: Functor application in tests/basic-modules fails after commit 15405

Bug fixes:
- PR#6560: Wrong failure message for {Int32,Int64,NativeInt}.of_string
  (Maxime Dénès and Gabriel Scherer)
- PR#6648: show_module should indicate its elision
- PR#6650: Cty_constr not handled correctly by Subst
- PR#6651: Failing component lookup

OCaml 4.02.2:
-------------

Toplevel and debugger:
- PR#5958: generalized polymorphic #install_printer